Được tạo bằng Colab

--- a/HK151_SPE_Iron_Sentinel.ipynb
+++ b/HK151_SPE_Iron_Sentinel.ipynb
@@ -61,7 +61,7 @@
         "id": "ixLc5p9VxC2Z",
         "outputId": "8d9b2e91-8eb1-46c9-f6c2-480ee500b143"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -101,15 +101,15 @@
         "\n",
         "## Workmap declaration\n",
         "\n",
-        "| Last name | Student ID | Design Role | Dev Role | Eval Role | Report Role | Ass1 work description (details in text) | Rating | week 2 outcome | week 3 outcome | week 4 outcome  |\n",
+        "| Last name | Student ID | Design Role | Dev Role | Eval Role | Report Role | Ass1 work description (details in text) | Rating | week 2 outcome | week 3 outcome | week 4 outcome |\n",
         "|---|---|---|---|---|---|---|---|---|---|---|\n",
         "| **CAO VĨNH PHÁT** | **2212497** | **Yes** | No | No | Yes | **(Platoon 1 - Trưởng nhóm Design)**: Xác định biên giới hệ thống (Source -> Entrance -> Food Stations -> Sink). Xây dựng khung sườn cho `spe_design_buffet.py`. Định nghĩa cấu trúc `MMcNode` và các Enum. | 100% | Định nghĩa Use Case & Bài toán | Sơ đồ lớp & Cấu trúc dữ liệu | Rà soát thiết kế cuối cùng |\n",
         "| **LÊ HẢI NGUYÊN** | **2212294** | No | **Yes** | No | No | **(Platoon 2)**: Lập trình logic chính `SimPy` trong `[version2]`. Cài đặt class `BuffetQueue` dùng `simpy.Resource`. Xử lý logic định tuyến (Routing Matrix) và luồng đi của khách hàng. | 100% | Nghiên cứu thư viện SimPy | Code vòng lặp mô phỏng chính | Tính năng nâng cao (Reneging & Animation) |\n",
-        "| **NGUYỄN MINH QUÝ** | **2212868** | No | No | **Yes** | Yes | **(Platoon 3)**: Chạy module `AnalyticalSolver` để kiểm chứng kết quả mô phỏng so với Lý thuyết Hàng đợi (Định luật Little). So sánh kết quả giữa \"Experiment A\" (Baseline) và \"Experiment B\" (Stress test). |  | |  |\n",
+        "| **NGUYỄN MINH QUÝ** | **2212868** | No | No | **Yes** | Yes | **(Platoon 3)**: Chạy module `AnalyticalSolver` để kiểm chứng kết quả mô phỏng so với Lý thuyết Hàng đợi (Định luật Little). So sánh kết quả giữa \"Experiment A\" (Baseline) và \"Experiment B\" (Stress test). | | | | |\n",
         "| **NGUYỄN QUANG NGHIÊM** | **2212209** | No | **Yes** | No | No | **(Platoon 2)**: Cài đặt class `ExperimentManager`. Thêm các bộ đếm thống kê (phương pháp Welch loại bỏ sai số đầu, Khoảng tin cậy Student-t). Code phần xuất log ra CSV. | 100% | Nghiên cứu file `pe7-analysis.pdf` | Cài đặt logic thống kê | Tối ưu code & Sửa lỗi |\n",
-        "| **NGÔ QUANG TÙNG** | **2213869** | No | No | **Yes** | Yes | **(Platoon 3)**: Quản lý \"Snapshot\". Làm sạch code `[version2]` để public. Tạo repository Github Public. Đảm bảo output của Colab Notebook được lưu trữ cố định cho việc chấm điểm Phase 3. |  |  |  |  |\n",
-        "| **NGUYỄN NGỌC SONG THỦY** | **2213381** | No | No | **Yes** | Yes | **(Platoon 3)**: Viết tài liệu kỹ thuật. Chi tiết hóa việc \"Mapping\" giữa tham số thực tế (Buffet) và tham số mô hình ($\\lambda, \\mu, c, K$). Soạn thảo hướng dẫn sử dụng (Manual). |  |  |  |  |\n",
-        "| **NGUYỄN PHƯƠNG NGUYÊN** | **2212311** | **Yes** | No | No | Yes | **(Platoon 1)**: Định nghĩa tham số Workload (`WL-1` bình thường, `WL-2` cao điểm). Xác định biên giới hệ thống (Source -> Entrance -> Food Stations -> Sink).Tính toán xác suất chuyển trạng thái cho ma trận định tuyến `R_matrix`. Thiết kế logic ra quyết định của `Customer`.Ánh xạ các quầy Buffet vào ký hiệu Kendall ($M/M/c/K$). | 100% | Nghiên cứu về Workload | Định nghĩa tham số Workload | Tinh chỉnh thiết kế |\n",
+        "| **NGÔ QUANG TÙNG** | **2213869** | No | No | **Yes** | Yes | **(Platoon 3)**: Quản lý \"Snapshot\". Làm sạch code `[version2]` để public. Tạo repository Github Public. Đảm bảo output của Colab Notebook được lưu trữ cố định cho việc chấm điểm Phase 3. | | | | |\n",
+        "| **NGUYỄN NGỌC SONG THỦY** | **2213381** | No | No | **Yes** | Yes | **(Platoon 3)**: Viết tài liệu kỹ thuật. Chi tiết hóa việc \"Mapping\" giữa tham số thực tế (Buffet) và tham số mô hình ($\\lambda, \\mu, c, K$). Soạn thảo hướng dẫn sử dụng (Manual). | | | | |\n",
+        "| **NGUYỄN PHƯƠNG NGUYÊN** | **2212311** | **Yes** | No | No | Yes | **(Platoon 1)**: Định nghĩa tham số Workload (`WL-1` bình thường, `WL-2` cao điểm). Xác định biên giới hệ thống (Source -> Entrance -> Food Stations -> Sink). Tính toán xác suất chuyển trạng thái cho ma trận định tuyến `R_matrix`. Thiết kế logic ra quyết định của `Customer`. Ánh xạ các quầy Buffet vào ký hiệu Kendall ($M/M/c/K$). | 100% | Nghiên cứu về Workload | Định nghĩa tham số Workload | Tinh chỉnh thiết kế |\n",
         "| **THÁI ANH KHƯƠNG** | **2113806** | **Yes** | No | No | Yes | **(Platoon 1)**: Xác định các ràng buộc dung lượng hệ thống (Max 200 khách). Thiết kế giao diện cho class `Simulation`. | 60% | Ánh xạ ký hiệu Kendall | Thiết kế Interface | Tích hợp thiết kế cuối cùng |"
       ],
       "metadata": {
@@ -363,7 +363,7 @@
         },
         "outputId": "c2b7e94b-a8df-46e1-c23d-df2d4e7acbf3"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -414,7 +414,7 @@
       "metadata": {
         "id": "y8Rw0UtNx7qy"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -536,7 +536,7 @@
         "id": "SYzfrE3fyLCm",
         "collapsed": true
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -550,7 +550,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "IDMU-QtsvyDn"
       },
@@ -1182,7 +1182,7 @@
       "metadata": {
         "id": "KRdeaihH0JHo"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1346,7 +1346,7 @@
       "metadata": {
         "id": "Ms1TtP031lB8"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1369,7 +1369,7 @@
       "metadata": {
         "id": "xOsXBAY01728"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1449,7 +1449,7 @@
       "metadata": {
         "id": "nNAt2eFn3XzJ"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1563,7 +1563,7 @@
       "metadata": {
         "id": "r5iECzTu2vzO"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1852,7 +1852,7 @@
       "metadata": {
         "id": "CctPJHeo2I6L"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2047,7 +2047,7 @@
         "id": "FSujEud735u8",
         "outputId": "32faa9fd-ea19-44d3-e67f-6b1548ff6770"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2407,7 +2407,7 @@
         },
         "outputId": "1772b373-206b-4a5d-a603-bb312a02b651"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2491,7 +2491,7 @@
         },
         "outputId": "0cb313fc-65c0-48c8-f523-9291e65ae323"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
