Được tạo bằng Colab

--- a/HK151_SPE_Iron_Sentinel.ipynb
+++ b/HK151_SPE_Iron_Sentinel.ipynb
@@ -56,12 +56,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 559
+          "height": 590
         },
         "id": "ixLc5p9VxC2Z",
-        "outputId": "8d9b2e91-8eb1-46c9-f6c2-480ee500b143"
+        "outputId": "c401b282-ffd7-41fa-ca2e-d464e5577ba3"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "display_data",
@@ -109,7 +109,7 @@
         "| **NGUYỄN QUANG NGHIÊM** | **2212209** | No | **Yes** | No | No | **(Platoon 2)**: Cài đặt class `ExperimentManager`. Thêm các bộ đếm thống kê (phương pháp Welch loại bỏ sai số đầu, Khoảng tin cậy Student-t). Code phần xuất log ra CSV. | 100% | Nghiên cứu file `pe7-analysis.pdf` | Cài đặt logic thống kê | Tối ưu code & Sửa lỗi |\n",
         "| **NGÔ QUANG TÙNG** | **2213869** | No | No | **Yes** | Yes | **(Platoon 3)**: Quản lý \"Snapshot\". Làm sạch code `[version2]` để public. Tạo repository Github Public. Đảm bảo output của Colab Notebook được lưu trữ cố định cho việc chấm điểm Phase 3. | | | | |\n",
         "| **NGUYỄN NGỌC SONG THỦY** | **2213381** | No | No | **Yes** | Yes | **(Platoon 3)**: Viết tài liệu kỹ thuật. Chi tiết hóa việc \"Mapping\" giữa tham số thực tế (Buffet) và tham số mô hình ($\\lambda, \\mu, c, K$). Soạn thảo hướng dẫn sử dụng (Manual). | | | | |\n",
-        "| **NGUYỄN PHƯƠNG NGUYÊN** | **2212311** | **Yes** | No | No | Yes | **(Platoon 1)**: Định nghĩa tham số Workload (`WL-1` bình thường, `WL-2` cao điểm). Xác định biên giới hệ thống (Source -> Entrance -> Food Stations -> Sink). Tính toán xác suất chuyển trạng thái cho ma trận định tuyến `R_matrix`. Thiết kế logic ra quyết định của `Customer`. Ánh xạ các quầy Buffet vào ký hiệu Kendall ($M/M/c/K$). | 100% | Nghiên cứu về Workload | Định nghĩa tham số Workload | Tinh chỉnh thiết kế |\n",
+        "| **NGUYỄN PHƯƠNG NGUYÊN** | **2212311** | **Yes** | No | No | Yes | **(Platoon 1)**: Định nghĩa tham số Workload (`WL-1` bình thường, `WL-2` cao điểm). Xác định biên giới hệ thống (Source -> Entrance -> Food Stations -> Sink). Tính toán xác suất chuyển trạng thái cho ma trận định tuyến `R_matrix`.   | 100% | Nghiên cứu về Workload | Định nghĩa tham số Workload | Tinh chỉnh thiết kế |\n",
         "| **THÁI ANH KHƯƠNG** | **2113806** | **Yes** | No | No | Yes | **(Platoon 1)**: Xác định các ràng buộc dung lượng hệ thống (Max 200 khách). Thiết kế giao diện cho class `Simulation`. | 60% | Ánh xạ ký hiệu Kendall | Thiết kế Interface | Tích hợp thiết kế cuối cùng |"
       ],
       "metadata": {
@@ -361,9 +361,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c2b7e94b-a8df-46e1-c23d-df2d4e7acbf3"
+        "outputId": "a832195c-5922-47d8-b503-9f462e7b9153"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -414,7 +414,7 @@
       "metadata": {
         "id": "y8Rw0UtNx7qy"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -536,7 +536,7 @@
         "id": "SYzfrE3fyLCm",
         "collapsed": true
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -550,7 +550,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "IDMU-QtsvyDn"
       },
@@ -1182,7 +1182,7 @@
       "metadata": {
         "id": "KRdeaihH0JHo"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -1346,7 +1346,7 @@
       "metadata": {
         "id": "Ms1TtP031lB8"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -1369,7 +1369,7 @@
       "metadata": {
         "id": "xOsXBAY01728"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -1449,7 +1449,7 @@
       "metadata": {
         "id": "nNAt2eFn3XzJ"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -1563,7 +1563,7 @@
       "metadata": {
         "id": "r5iECzTu2vzO"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -1852,7 +1852,7 @@
       "metadata": {
         "id": "CctPJHeo2I6L"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -2045,9 +2045,9 @@
           "height": 1000
         },
         "id": "FSujEud735u8",
-        "outputId": "32faa9fd-ea19-44d3-e67f-6b1548ff6770"
+        "outputId": "42e97a13-8cf3-4d82-f69c-74d14e85403a"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -2405,9 +2405,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1772b373-206b-4a5d-a603-bb312a02b651"
+        "outputId": "b325f851-cb4a-4f41-ddbd-331ea702780c"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -2489,9 +2489,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 17
         },
-        "outputId": "0cb313fc-65c0-48c8-f523-9291e65ae323"
+        "outputId": "6a822db2-4466-4fcd-a786-f56b34965c70"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2552,7 +2552,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_4cb84905-a034-4bd3-800d-d2c4ccb80544\", \"content.zip\", 38239119)"
+              "download(\"download_8ef4c532-da4f-4130-b2f8-a2ad37c8ce77\", \"content.zip\", 38239119)"
             ]
           },
           "metadata": {}
@@ -2562,9 +2562,44 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 10. Conclusions\n",
+        "# 10. Kết luận (Conclusions)\n",
         "\n",
-        "Project coordinator provide the statements of the work's including the superior point and 2-3 limitation provided by the testing member"
+        "### 10.1. Tổng kết Kết quả Công việc\n",
+        "Dự án đã hoàn thành việc xây dựng và đánh giá một hệ thống mô phỏng sự kiện rời rạc (Discrete-Event Simulation) cho quy trình phục vụ tại nhà hàng buffet đa trạm. Hệ thống được thiết kế dựa trên nền tảng lý thuyết hàng đợi **M/M/c/K**, tích hợp logic định tuyến theo **Chuỗi Markov** và đặc biệt là cơ chế **Reneging** (khách hàng bỏ hàng khi mất kiên nhẫn).\n",
+        "\n",
+        "Toàn bộ quy trình—từ việc sinh tải giả lập (workload generator), xử lý luồng khách qua các trạm (Entrance, Grill, Beverage, Dessert) đến thu thập và phân tích số liệu—đều đã được tự động hóa hoàn toàn.\n",
+        "\n",
+        "Thông qua quá trình kiểm chứng nghiêm ngặt (**Verification**) với bộ giải tích lý thuyết (Analytical Solver) trong kịch bản cơ sở (Experiment A), mô hình đã chứng minh độ tin cậy cao với mức sai số dưới **3%** cho các chỉ số quan trọng như thời gian đáp ứng ($R$) và thông lượng ($X$). Điều này khẳng định tính đúng đắn của logic hàng đợi cốt lõi mà nhóm đã cài đặt.\n",
+        "\n",
+        "### 10.2. Điểm mạnh và Sự vượt trội (Superior Points)\n",
+        "So với các mô hình lý thuyết cơ bản trong sách giáo khoa, hệ thống mô phỏng thể hiện ba ưu điểm kỹ thuật nổi bật:\n",
+        "\n",
+        "1.  **Cơ chế \"Tự ổn định\" nhờ Reneging (Self-stabilizing Capability):**\n",
+        "    * Đây là đóng góp quan trọng nhất. Trong khi các công thức toán học truyền thống thường \"bó tay\" (trả về kết quả vô cực) khi hệ thống quá tải, mô hình mô phỏng của nhóm phản ánh chính xác hành vi thực tế của con người.\n",
+        "    * *Minh chứng:* Tại kịch bản **Stress Test** (tải tăng gấp 100 lần), hệ thống không bị sụp đổ mà vẫn duy trì trạng thái ổn định với thời gian đáp ứng thấp (~3.48 phút) nhờ việc khách hàng tự động rời bỏ hàng đợi. Đây là tính năng sát thực tế mà mô hình tĩnh không làm được.\n",
+        "\n",
+        "2.  **Kiến trúc Module hóa và Kiểm chứng chéo:**\n",
+        "    * Mã nguồn không viết liền mạch mà được phân tách rõ ràng giữa các lớp: `Simulation` (lõi mô phỏng), `ExperimentManager` (quản lý thí nghiệm) và `AnalyticalSolver` (kiểm chứng toán học).\n",
+        "    * Thiết kế này cho phép nhóm dễ dàng cấu hình và chạy hàng loạt biến thể workload phức tạp (từ Baseline, Stress đến Ramp-up) chỉ bằng vài dòng lệnh, đồng thời luôn có sự đối chiếu trực tiếp với lý thuyết để đảm bảo tính nhất quán.\n",
+        "\n",
+        "3.  **Độ tin cậy Thống kê cao:**\n",
+        "    * Thay vì chỉ chạy mô phỏng một lần và lấy kết quả ngẫu nhiên, hệ thống áp dụng kỹ thuật **Lặp lại độc lập (Independent Replications)** kết hợp với **Khoảng tin cậy Student-t 95%**.\n",
+        "    * Bên cạnh đó, phương pháp **Welch** được tích hợp để trực quan hóa và loại bỏ giai đoạn khởi động (warmup), đảm bảo các chỉ số báo cáo phản ánh đúng trạng thái ổn định (steady-state) của hệ thống.\n",
+        "\n",
+        "### 10.3. Các Hạn chế (Limitations)\n",
+        "Mặc dù mô hình đã đáp ứng tốt các yêu cầu thiết kế và vận hành ổn định, quá trình kiểm thử thực tế (Validation) đã chỉ ra 3 hạn chế chính cần cải thiện trong tương lai:\n",
+        "\n",
+        "1.  **Thiếu Tài nguyên Chỗ ngồi & Thời gian Ăn (Hạn chế về Phạm vi):**\n",
+        "    * Mô hình hiện tại giả định khách hàng rời hệ thống ngay sau khi lấy xong đồ ăn. Chúng ta chưa mô phỏng tài nguyên \"Bàn ghế\" hay khoảng thời gian khách ngồi ăn (`Eating Duration`).\n",
+        "    * *Hệ quả:* Chỉ số Thời gian Đáp ứng ($R$) hiện tại chỉ đại diện cho sự vất vả khi \"đi lấy thức ăn\" chứ chưa bao gồm toàn bộ trải nghiệm tại nhà hàng. Trong thực tế, việc hết bàn ăn có thể gây tắc nghẽn ngược ra tận cửa vào.\n",
+        "\n",
+        "2.  **Định tuyến Tĩnh (Hạn chế về Hành vi):**\n",
+        "    * Logic chọn trạm kế tiếp của khách hàng đang dựa trên các xác suất cố định (Static Probabilities).\n",
+        "    * *Hệ quả:* Khách hàng trong mô hình chưa đủ \"thông minh\" để thực hiện hành vi **Jockeying** (quan sát thấy hàng nướng đông quá thì đổi sang hàng nước). Điều này có thể dẫn đến việc ước tính thời gian chờ tại các trạm hot cao hơn so với thực tế một chút.\n",
+        "\n",
+        "3.  **Giới hạn của Công cụ Kiểm chứng trong điều kiện cực đoan:**\n",
+        "    * Khi thực hiện Stress Test với tải trọng vượt quá năng lực phục vụ ($\\lambda > c\\mu$), bộ giải lý thuyết M/M/c/K trả về kết quả lỗi hoặc vô cực ($\\infty$).\n",
+        "    * *Hệ quả:* Nhóm không thể tính toán con số phần trăm sai số (% Error) cụ thể cho các kịch bản quá tải này (Experiment C & D), mà chỉ có thể đánh giá dựa trên hành vi định tính của hệ thống."
       ],
       "metadata": {
         "id": "fbY9vNTS0D6T"
