Được tạo bằng Colab

--- a/HK151_SPE_Iron_Sentinel.ipynb
+++ b/HK151_SPE_Iron_Sentinel.ipynb
@@ -322,6 +322,58 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## Phụ lục ký hiệu CSV\n",
+        "\n",
+        "### 1. Bảng hệ thống (`system_workloads/*.csv`)\n",
+        "- `Workload`: tên workload/replication (vd. `WL-STRESS-NO-REN-X100-REP01`)\n",
+        "- `Replication`: số thứ tự replication (1…30)\n",
+        "- `AllowReneging`: 1 nếu bật reneging cho các quầy, 0 nếu không\n",
+        "- `LambdaInput`: λ gốc ban đầu vào hệ thống (khách/phút) (trước entrance) theo cấu hình\n",
+        "- `SimDuration`: tổng thời gian mô phỏng (phút)\n",
+        "- `Warmup`: thời gian warmup bị loại khỏi thống kê (phút)\n",
+        "- `E_r_sim`: thời gian đáp ứng trung bình của toàn hệ (E[r])\n",
+        "- `E_r_ci95`: nửa độ rộng CI 95% cho E[r]\n",
+        "- `lambda_effective`: tốc độ gốc vào hệ thực tế của mô phỏng (khách/phút)\n",
+        "- `E_N_sim`: số khách trung bình trong hệ (E[N])\n",
+        "- `P_reject_N_max`: xác suất bị chặn vì đạt `SYSTEM_CAPACITY_MAX`\n",
+        "- `total_in`: số khách đã vào hệ (sau warmup)\n",
+        "- `total_out`: số khách đã rời hệ thành công\n",
+        "- `total_rejected`: số khách bị chặn ở cấp hệ thống (không vào được queue nào)\n",
+        "- `total_reneged`: tổng khách bỏ hàng trong toàn hệ\n",
+        "\n",
+        "### 2. Bảng từng quầy (`queue_workloads/*.csv`)\n",
+        "- `Workload`: tên workload/replication\n",
+        "- `Replication`: số thứ tự replication\n",
+        "- `Queue`: tên quầy (`Entrance 1`, `Grill`, …)\n",
+        "- `AllowReneging`: 1/0 tùy cấu hình quầy\n",
+        "- `Servers`: số server `c`\n",
+        "- `Buffer`: sức chứa hàng chờ (khách)\n",
+        "- `ServiceRate`: tốc độ phục vụ µ (khách/phút)\n",
+        "- `E_T`: thời gian trung bình tại quầy (chờ + phục vụ)\n",
+        "- `E_N`: số khách trung bình ở quầy (E[T] × λ_quầy)\n",
+        "- `U`: hệ số sử dụng ρ = λ_quầy / (c·µ)\n",
+        "- `P_reject`: xác suất quầy từ chối vì đầy (`Rejected / Arrivals`)\n",
+        "- `Lambda`: tốc độ phục vụ thực tế tại quầy (khách/phút)\n",
+        "- `Arrivals`: tổng lượt khách thử vào quầy\n",
+        "- `Rejected`: số khách bị quầy từ chối vì buffer đầy\n",
+        "- `Reneged`: số khách bỏ hàng trong lúc chờ (nếu quầy cho phép reneging)\n",
+        "\n",
+        "### 3. Bảng chuyển tiếp (`transition_workloads/*.csv`)\n",
+        "- `Workload`: tên workload/replication\n",
+        "- `Replication`: số thứ tự replication\n",
+        "- `From`: quầy xuất phát (Grill/Beverage/Dessert)\n",
+        "- `To`: đích tiếp theo (Grill/Beverage/Dessert/SINK)\n",
+        "- `Transitions`: số lượt quan sát khách đi từ `From` đến `To`\n",
+        "- `Probability`: xác suất thực nghiệm = `Transitions / TotalFrom`\n",
+        "- `TotalFrom`: tổng lượt khách rời quầy `From` (mẫu số khi chuẩn hóa)"
+      ],
+      "metadata": {
+        "id": "YcF6ZYvmcUoL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## System Component/Module description"
       ],
       "metadata": {
